<resources>
    <string name="app_name">Androidsss</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login">Login!</string>
    <string name="log_in">Log in!</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="sign_in">Sign in</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="hello">Hello</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="profile_picture">Profile picture</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="age">Age</string>
    <string name="new_password">New Password</string>
    <string name="save_profile">Save Profile</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="welcome">Welcome</string>
</resources>