<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <!-- Container for buttons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="vertical">

        <!-- Logout Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textAllCaps="false"
            app:icon="@drawable/ic_logout"
            app:iconGravity="textStart"
            app:iconTint="@color/blue"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textColor="@color/blue"
            app:strokeColor="@color/blue"
            android:layout_marginBottom="8dp" />

        <!-- Profile Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/profileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textAllCaps="false"
            app:icon="@drawable/ic_person"
            app:iconGravity="textStart"
            app:iconTint="@color/blue"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textColor="@color/blue"
            app:strokeColor="@color/blue" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp" />

</LinearLayout>

